@@ -71,10 +71,11 @@ class WFTextArea extends WFWidget
         {
             $html .= '
             PHOCOA.namespace("widgets.' . $this->id . '");
+            PHOCOA.widgets.' . $this->id . '.nullPlaceholder = ' . json_encode($this->nullPlaceholder) . ';
             PHOCOA.widgets.' . $this->id . '.hasFocus = false;
             PHOCOA.widgets.' . $this->id . '.handleFocus = function(e) {
                 PHOCOA.widgets.' . $this->id . '.hasFocus = true;
-                if ($F(\'' . $this->id . '\') === \'' . $this->nullPlaceholder . '\')
+                if ($F(\'' . $this->id . '\') === PHOCOA.widgets.' . $this->id . '.nullPlaceholder)
                 {
                     $(\'' . $this->id . '\').value = "";
                 }
@@ -87,9 +88,9 @@ class WFTextArea extends WFWidget
             PHOCOA.widgets.' . $this->id . '.handlePlaceholder = function() {
                 if (!PHOCOA.widgets.' . $this->id . '.hasFocus)
                 {
-                    if ($F(\'' . $this->id . '\') === \'\')
+                    if ($F(\'' . $this->id . '\') === \'\' || $F(\'' . $this->id . '\') === PHOCOA.widgets.' . $this->id . '.nullPlaceholder)
                     {
-                        $(\'' . $this->id . '\').value = \'' . $this->nullPlaceholder . '\';
+                        $(\'' . $this->id . '\').value = PHOCOA.widgets.' . $this->id . '.nullPlaceholder;
                         $(\'' . $this->id . '\').addClassName("phocoaWFSearchField_PlaceholderText");
                     }
                 }
